--- a/ImageSlider/Base.lproj/Main.storyboard
+++ b/ImageSlider/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -16,48 +16,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hiu-KU-fcX">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="➡️"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="303" y="450" width="30" height="48"/>
-                                </variation>
-                                <connections>
-                                    <action selector="showNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a17-0b-ppu"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrL-bT-SXf">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="⬅️"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="68" y="450" width="30" height="48"/>
-                                </variation>
-                                <connections>
-                                    <action selector="showPrevious:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cRz-O0-70S"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GOPRO.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="VLa-Bu-Twr">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="50" y="28" width="300" height="300"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="GHK-qF-syS"/>
+                                    <constraint firstAttribute="height" constant="489" id="HKX-ER-b5h"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="GHK-qF-syS"/>
+                                        <exclude reference="HKX-ER-b5h"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="GHK-qF-syS"/>
+                                        <include reference="HKX-ER-b5h"/>
+                                    </mask>
                                 </variation>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="YSe-Wd-8DX">
+                                <rect key="frame" x="48" y="580" width="108" height="88"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrL-bT-SXf">
+                                        <rect key="frame" x="20" y="20" width="30" height="48"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="⬅️"/>
+                                        <connections>
+                                            <action selector="showPrevious:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cRz-O0-70S"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hiu-KU-fcX">
+                                        <rect key="frame" x="58" y="20" width="30" height="48"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="➡️"/>
+                                        <connections>
+                                            <action selector="showNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a17-0b-ppu"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                            </stackView>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VLa-Bu-Twr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ana-ec-See"/>
+                            <constraint firstItem="YSe-Wd-8DX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="500" id="NBJ-Z4-xrT"/>
+                            <constraint firstItem="YSe-Wd-8DX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="t2p-j2-9H9"/>
+                            <constraint firstItem="VLa-Bu-Twr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="uu9-wz-VhY"/>
+                            <constraint firstItem="VLa-Bu-Twr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zP7-uv-WVQ"/>
+                        </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="Hiu-KU-fcX"/>
-                                <exclude reference="hrL-bT-SXf"/>
                                 <exclude reference="VLa-Bu-Twr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Ana-ec-See"/>
+                                <exclude reference="uu9-wz-VhY"/>
+                                <exclude reference="zP7-uv-WVQ"/>
+                                <exclude reference="NBJ-Z4-xrT"/>
+                                <exclude reference="t2p-j2-9H9"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
-                                <include reference="Hiu-KU-fcX"/>
-                                <include reference="hrL-bT-SXf"/>
                                 <include reference="VLa-Bu-Twr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Ana-ec-See"/>
+                                <include reference="uu9-wz-VhY"/>
+                                <include reference="zP7-uv-WVQ"/>
+                                <include reference="NBJ-Z4-xrT"/>
+                                <include reference="t2p-j2-9H9"/>
                             </mask>
                         </variation>
                     </view>
